[project]
name = "daily-leetcode"
version = "0.0.1"
description = "MinHyeong's daily leetcode.com solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdownify",
    "black",
    "BeautifulSoup4",
    "gql[aiohttp]",
]

[tool.pylint."messages control"]
disable = ["unspecified-encoding"]

[tool.black]
line-length = 88
